--- a/app/main/views/settings/settings.vnu.html
+++ b/app/main/views/settings/settings.vnu.html
@@ -133,7 +133,7 @@
                         <table class="table table-striped">
                             <thead>
                                 <tr>
-                                    <th>#</th>
+                                    <th>Mã người kí kết</th>
                                     <th>Người kí kết</th>
                                     <th>Sửa</th>
                                     <th>Xóa</th>
@@ -172,7 +172,7 @@
                         <table class="table table-striped">
                             <thead>
                                 <tr>
-                                    <th>#</th>
+                                    <th>Mã đơn vị theo dõi</th>
                                     <th>Đơn vị theo dõi</th>
                                     <th>Account</th>
                                     <th>Sửa</th>
