--- a/app/main/views/settings/settings.vnu.html
+++ b/app/main/views/settings/settings.vnu.html
@@ -111,6 +111,23 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label class="control-label col-md-3 col-sm-3 col-xs-12">Chức vụ</label>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <select class="form-control" ng-model="input.about">
+                            <option value="Giám đốc">Giám đốc</option>
+                            <option value="Phó giám đốc">Phó giám đốc</option>
+                            <option value="Trưởng ban">Trưởng ban</option>
+                            <option value="Phó ban">Phó ban</option>
+                            <option value="Hiệu trưởng">Hiệu trưởng</option>
+                            <option value="Phó hiệu trưởng">Phó hiệu trưởng</option>
+                            <option value="Trưởng phòng">Trưởng phòng</option>
+                            <option value="Phó phòng">Phó phòng</option>
+                            <option value="Trưởng Khoa">Trưởng Khoa</option>
+                            <option value="Phó Khoa">Phó Khoa</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
                     <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
                         <button type="submit" class="btn btn-success" ng-click="createUetMan()">Tạo</button>
                     </div>
@@ -135,22 +152,27 @@
                                 <tr>
                                     <th>Mã người kí kết</th>
                                     <th>Người kí kết</th>
+                                    <th>Chức vụ</th>
                                     <th>Sửa</th>
-                                    <th>Xóa</th>
+                                    <!-- <th>Xóa</th> -->
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr ng-repeat="uetMan in allUetMan" id="tr_uetMan_{{uetMan.id}}">
                                     <th scope="row">{{uetMan.id}}</th>
                                     <td id="uetMan_{{uetMan.id}}">{{uetMan.uetManName}}</td>
+                                    <td id="about_{{uetMan.id}}">
+                                        
+                                        {{uetMan.about}}
+                                    </td>
                                     <th>
                                         <i id="edit_uetMan_{{uetMan.id}}" class="fa fa-edit cursor" ng-click="editUetMan(uetMan.id, uetMan.content); edit_uetMan = true"></i>
                                         <button id="button_cancel_edit_uetMan_{{uetMan.id}}" ng-if="edit_uetMan" type="button" class="btn btn-default btn-xs" ng-click="cancelEditUetMan(uetMan)">Hủy</button>
                                         <button id="save_edit_uetMan_{{uetMan.id}}" ng-if="edit_uetMan" type="button" class="btn btn-success btn-xs" ng-click="saveEditUetMan(uetMan.id)">Xác nhận</button>
                                     </th>
-                                    <td class=" ">
+                                    <!-- <td class=" ">
                                         <a class="cursor" ng-click="confirmDelete(uetMan.id, uetMan.uetManName)" data-toggle="modal" data-target="#delete_uet_man"><i class="fa fa-trash"></i></a>
-                                    </td>
+                                    </td> -->
                                 </tr>
                             </tbody>
                         </table>
@@ -176,7 +198,7 @@
                                     <th>Đơn vị theo dõi</th>
                                     <th>Account</th>
                                     <th>Sửa</th>
-                                    <th>Xóa</th>
+                                    <!-- <th>Xóa</th> -->
                                 </tr>
                             </thead>
                             <tbody>
@@ -191,9 +213,9 @@
                                         <button id="button_cancel_edit_unitName_{{unitName.id}}" ng-if="edit_unitName" type="button" class="btn btn-default btn-xs" ng-click="cancelEditUnitName(unitName)">Hủy</button>
                                         <button id="save_edit_unitName_{{unitName.id}}" ng-if="edit_unitName" type="button" class="btn btn-success btn-xs" ng-click="saveEditUnitName(unitName.id)">Xác nhận</button>
                                     </th>
-                                    <td class=" ">
+                                    <!-- <td class=" ">
                                         <a class="cursor" ng-click="confirmDelete(unitName.id, unitName.unitName)" data-toggle="modal" data-target="#delete_unit"><i class="fa fa-trash"></i></a>
-                                    </td>
+                                    </td> -->
                                 </tr>
                             </tbody>
                         </table>
