--- a/app/main/views/partner/partner.information.html
+++ b/app/main/views/partner/partner.information.html
@@ -38,6 +38,12 @@
         </div>
     </div> -->
     <div class="form-group">
+        <label class="control-label col-md-4 col-sm-4 col-xs-12">Ngày thành lập</label>
+        <div class="col-md-6 col-sm-6 col-xs-12">
+            <input class="form-control col-md-7 col-xs-12" type="text" ng-model="Partner.birthday">
+        </div>
+    </div>
+    <div class="form-group">
         <label class="control-label col-md-4 col-sm-4 col-xs-12">Giám đốc</label>
         <div class="col-md-6 col-sm-6 col-xs-12">
             <input class="form-control col-md-7 col-xs-12" type="text" ng-model="Partner.director">
