--- a/app/main/views/settings/settings.vnu.html
+++ b/app/main/views/settings/settings.vnu.html
@@ -114,6 +114,7 @@
                     <label class="control-label col-md-3 col-sm-3 col-xs-12">Chức vụ</label>
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <select class="form-control" ng-model="input.about">
+                            <option value=" ">--Chọn chức vụ--</option>
                             <option value="Giám đốc">Giám đốc</option>
                             <option value="Phó giám đốc">Phó giám đốc</option>
                             <option value="Trưởng ban">Trưởng ban</option>
