--- a/app/main/views/partner/partner.contract.html
+++ b/app/main/views/partner/partner.contract.html
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-4 col-sm-4 col-xs-12">Người ký hợp đồng (VNU-UET): </label>
+                        <label class="control-label col-md-4 col-sm-4 col-xs-12">Người ký hợp đồng ({{user.rolesAndSigningLevel.name}}): </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <select class="form-control" ng-model="input.uetManId">
                                 <option ng-repeat="uetMan in allUetMan" value="{{uetMan.id}}">
@@ -117,7 +117,7 @@
                             <!-- <input type="checkbox" id="check-all" class="flat"> -->
                             <!-- </th> -->
                             <th class="column-title">Tên cơ quan hợp tác</th>
-                            <th class="column-title">Người ký (VNU-UET)</th>
+                            <th class="column-title">Người ký ({{user.rolesAndSigningLevel.name}})</th>
                             <th class="column-title">Người ký (Đối tác)</th>
                             <th class="column-title">Nội dung hợp tác chính</th>
                             <th class="column-title">Kinh phí</th>
